--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,12 @@
 environment:
   matrix:
     - source: https://stat.ethz.ch/R/daily/R-devel.tar.gz
-#    - source: https://stat.ethz.ch/R/daily/R-patched.tar.gz
-    - source: https://cran.r-project.org/src/base-prerelease/R-latest.tar.gz
-    - source: https://cran.r-project.org/src/base/R-latest.tar.gz
+      deploy: ftp
+    - source: https://cloud.r-project.org/src/base-prerelease/R-latest.tar.gz
+      deploy: ftp
+#    - source: https://stat.ethz.ch/R/daily/R-patched.tar.gz      
+#    - source: https://cloud.r-project.org/src/base/R-latest.tar.gz
+#      deploy: ftp
 
 install:
   - ps: |
