try uploading with beta client, enable ftp debugging

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,7 +44,9 @@ deploy:
   username: upload
   password:
     secure: u7Vv/A5W5RiRQ0sJ6QmKvN/g6h3J9y9ujuqZi0uDAAY=
-  folder: builds\$(target)\$(revision)
+  folder: /archive/$(target)/$(revision)
   application: "%target%-win.zip"
   on:
     upload: true
+  beta: true
+  debug: true
