--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 environment:
   matrix:
-    - source: https://cloud.r-project.org/src/base-prerelease/R-latest.tar.gz
+    - source: https://cran.r-project.org/src/base-prerelease/R-latest.tar.gz
       upload: true
     - source: https://stat.ethz.ch/R/daily/R-devel.tar.gz
       upload: true
@@ -28,7 +28,7 @@ after_build:
 
 artifacts:
   - path: "%target%-win.zip"
-    name: Installer Bundle  
+    name: Installer Bundle
 
 on_success:
   - type %builddir%\check.log
