--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,11 @@
 environment:
   matrix:
-    - source: https://cran.r-project.org/src/base-prerelease/R-latest.tar.gz
-      archive: r-patched
     - source: https://stat.ethz.ch/R/daily/R-devel.tar.gz
       archive: r-devel
+    - source: https://cran.r-project.org/src/base-prerelease/R-latest.tar.gz
+      archive: r-patched
 #    - source: https://stat.ethz.ch/R/daily/R-patched.tar.gz      
-    - source: https://cloud.r-project.org/src/base/R-latest.tar.gz
+    - source: https://cran.r-project.org/src/base/R-latest.tar.gz
       archive: r-release
 
 install:
