--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,7 +39,7 @@ on_finish:
 
 deploy:
   provider: FTP
-  protocol: ftp
+  protocol: ftps
   host: ftp.opencpu.org
   username: upload
   password:
