--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,7 +41,7 @@ on_finish:
 
 deploy:
   - provider: FTP
-    protocol: ftps
+    protocol: sftp
     host: ftp.opencpu.org
     username: upload
     password:
@@ -51,7 +51,7 @@ deploy:
     debug: true
 
   - provider: FTP
-    protocol: ftps
+    protocol: sftp
     host: ftp.opencpu.org
     username: upload
     password:
