--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,10 +3,10 @@ environment:
     - source: https://stat.ethz.ch/R/daily/R-devel.tar.gz
       archive: r-devel
       cran: true
-    - source: https://cran.r-project.org/src/base-prerelease/R-latest.tar.gz
+    - source: https://stat.ethz.ch/R/daily/R-patched.tar.gz            
+#    - source: https://cran.r-project.org/src/base-prerelease/R-latest.tar.gz
       archive: r-patched
       cran: true
-#    - source: https://stat.ethz.ch/R/daily/R-patched.tar.gz      
     - source: https://cran.r-project.org/src/base/R-latest.tar.gz
       archive: r-release
 
