--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ environment:
 #    - source: https://cran.r-project.org/src/base-prerelease/R-latest.tar.gz
       archive: r-patched
       cran: true
-    - source: https://cran.r-project.org/src/base/R-latest.tar.gz
+    - source: https://cloud.r-project.org/src/base/R-latest.tar.gz
       archive: r-release
 
 install:
