switch to the prerelease branch

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,8 +3,8 @@ environment:
     - source: https://stat.ethz.ch/R/daily/R-devel.tar.gz
       archive: r-devel
       cran: true
-    - source: https://stat.ethz.ch/R/daily/R-patched.tar.gz
-#    - source: https://cran.r-project.org/src/base-prerelease/R-latest.tar.gz
+#    - source: https://stat.ethz.ch/R/daily/R-patched.tar.gz
+    - source: https://cran.r-project.org/src/base-prerelease/R-latest.tar.gz
       archive: r-patched
       cran: true
 #    - source: https://cloud.r-project.org/src/base/R-latest.tar.gz
