comment out release branch

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 environment:
   matrix:
-    - source: https://cloud.r-project.org/src/base/R-latest.tar.gz
-      archive: r-release    
+#    - source: https://cloud.r-project.org/src/base/R-latest.tar.gz
+#      archive: r-release
     - source: https://stat.ethz.ch/R/daily/R-devel.tar.gz
       archive: r-devel
       cran: true
