--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "extsoft"]
-	path = extsoft
-	url = https://github.com/rwinlib/extsoft
-	branch = master
 [submodule "cairo"]
 	path = cairo
 	url = https://github.com/rwinlib/cairo
@@ -14,3 +10,6 @@
 	path = tcltk
 	url = https://github.com/rwinlib/tcltk
 	branch = master
+[submodule "baselibs"]
+	path = baselibs
+	url = https://github.com/rwinlib/baselibs
