recalculate md5sum after signing the installer

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,7 +37,10 @@ after_build:
   - ps: Start-FileDownload $env:PfxUri -FileName $env:KeyFile
   - ps: SignFiles "${env:builddir}\*.exe"
   - ps: Remove-Item –path $env:KeyFile
-  - 7z a %target%-win.zip %builddir%\*.exe %builddir%\*.log %builddir%\*.html %builddir%\SVN-REVISION.* %builddir%\README.*
+  - cd %builddir%
+  - md5sum %target%-win.exe > md5sum.txt
+  - cd %startdir%
+  - 7z a %target%-win.zip %builddir%\*.exe %builddir%\md5sum.txt %builddir%\*.log %builddir%\*.html %builddir%\SVN-REVISION.* %builddir%\README.*
 
 artifacts:
   - path: "%target%-win.zip"
