Fix COMPILED_BY variable
because the default only works if gcc is on the PATH

--- a/files/MkRules.local.in
+++ b/files/MkRules.local.in
@@ -1,6 +1,7 @@
 #-*- Makefile -*-
 
 RTOOLS=C:/Rtools
+COMPILED_BY=gcc-4.9.3
 
 ### For multilib compiler ###
 # TOOL_PATH = C:/Rtools/gcc-4.6.3/bin/
