--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,8 @@
 environment:
   matrix:
+    - source: https://cran.r-project.org/src/base/R-3/R-3.5.0.tar.gz
+      RTOOLS_VERSION: 35
+      archive: r-release    
     - source: https://stat.ethz.ch/R/daily/R-devel.tar.gz
       archive: r-devel
       cran: true
@@ -7,9 +10,6 @@ environment:
     - source: https://cran.r-project.org/src/base-prerelease/R-latest.tar.gz
       archive: r-patched
       cran: true
-    - source: https://cloud.r-project.org/src/base/R-latest.tar.gz
-      RTOOLS_VERSION: 35
-      archive: r-release
 
   PfxUri:
     secure: z+vP1iY4odY07BV7v+yfuA2MBKQFFLGokZoefPhz22evsMT/KnwtB4NgcYNLJheI
