--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,8 @@
 environment:
   matrix:
-    - source: https://cran.r-project.org/src/base/R-3/R-3.5.0.tar.gz
-      RTOOLS_VERSION: 35
-      archive: r-release    
+#    - source: https://cran.r-project.org/src/base/R-3/R-3.5.0.tar.gz
+#      RTOOLS_VERSION: 35
+#      archive: r-release    
     - source: https://stat.ethz.ch/R/daily/R-devel.tar.gz
       archive: r-devel
       cran: true
