--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,17 @@
 environment:
   matrix:
-#    - source: https://cran.r-project.org/src/base/R-3/R-3.5.0.tar.gz
+#    - source: https://cran.r-project.org/src/base/R-3/R-3.6.0.tar.gz
 #      RTOOLS_VERSION: 35
+#      innosetup: 5
 #      archive: r-release    
     - source: https://stat.ethz.ch/R/daily/R-devel.tar.gz
       archive: r-devel
+      innosetup: 6
       cran: true
 #    - source: https://stat.ethz.ch/R/daily/R-patched.tar.gz
     - source: https://cran.r-project.org/src/base-prerelease/R-latest.tar.gz
       archive: r-patched
+      innosetup: 5
       cran: true
 
   PfxUri:
