--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ environment:
 #    - source: https://cran.r-project.org/src/base/R-3/R-3.6.0.tar.gz
 #      RTOOLS_VERSION: 35
 #      archive: r-release    
-    - source: https://stat.ethz.ch/R/daily/R-devel.tar.gz
+    - source: https://cran.r-project.org/src/base-prerelease/R-devel.tar.gz
       archive: r-devel
       cran: true
 #    - source: https://stat.ethz.ch/R/daily/R-patched.tar.gz
