--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,14 @@
 environment:
   matrix:
-#    - source: https://cran.r-project.org/src/base/R-3/R-3.6.0.tar.gz
-#      RTOOLS_VERSION: 35
-#      archive: r-release    
-    - source: https://cran.r-project.org/src/base-prerelease/R-devel.tar.gz
-      archive: r-devel
-      cran: true
-    - source: https://cran.r-project.org/src/base-prerelease/R-latest.tar.gz
-      archive: r-patched
-      cran: true
+   - source: https://cran.r-project.org/src/base/R-3/R-3.6.2.tar.gz
+     RTOOLS_VERSION: 35
+     archive: r-release
+    # - source: https://cran.r-project.org/src/base-prerelease/R-devel.tar.gz
+    #   archive: r-devel
+    #   cran: true
+    # - source: https://cran.r-project.org/src/base-prerelease/R-latest.tar.gz
+    #   archive: r-patched
+    #   cran: true
 
   PfxUri:
     secure: z+vP1iY4odY07BV7v+yfuA2MBKQFFLGokZoefPhz22evsMT/KnwtB4NgcYNLJheI
